<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Face"</string>
    <string name="login_title">"System"</string>
    <string name="login_passwd_prompt">"Password:"</string>
    <string name="login_passwd_ok">"OK"</string>
    <string name="login_passwd_cancel">"Cancel"</string>
    <string name="main_btn_logger">"Normal"</string>
    <string name="main_btn_err">"Failed"</string>
    <string name="main_btn_setup">"Setup"</string>
    <string name="setup_btn_ok">"O K"</string>
    <string name="setup_btn_network">"Network"</string>
    <string name="setup_btn_passwd">"Password"</string>
    <string name="setup_network_dhcp">"DHCP:"</string>
    <string name="setup_network_ip">"IP:"</string>
    <string name="setup_network_mask">"Mask:"</string>
    <string name="setup_network_gateway">"Gateway:"</string>
    <string name="setup_network_dns">DNS:</string>
    <string name="setup_passwd_old">"Old:"</string>
    <string name="setup_passwd_new">"New:"</string>
    <string name="setup_passwd_confirm">"Confirm:"</string>
    <string name="setup_network_real">"IP:"</string>
    <string name="setup_network_mac">"MAC:"</string>
    <string name="ip_conflict">"IP conflict"</string>
    <string name="sCaller_call">"Calling"</string>
    <string name="sCaller_call_err">"Call failed."</string>
    <string name="sCaller_talk">"Talking"</string>
    <string name="sCaller_monitor">"In Monitor"</string>
    <string name="sCaller_no_answer">"No Answer"</string>
    <string name="sCaller_finish">"Finished"</string>

    <string name="face_normal_name">"Name:  "</string>
    <string name="face_normal_similarity">"Similarity:  "</string>
    <string name="face_normal_white">"Status:   Normal"</string>
    <string name="face_normal_black">"Status:   Black"</string>
    <string name="face_normal_capture">"C%d"</string>
    <string name="face_normal_prompt">"Please look at the camera."</string>
    <string name="face_normal_thermal">"Please aim at the face box."</string>
    <string name="face_osd_lived">"Spoofing detecting"</string>
    <string name="face_osd_thermal">"Temperature: "</string>
    <string name="face_osd_mask_err">"Not Mask"</string>
</resources>